--- a/src/components/nothingFoundForm/nothingFoundForm.module.css
+++ b/src/components/nothingFoundForm/nothingFoundForm.module.css
@@ -2,21 +2,35 @@
 
 .wrapper {
   display: grid;
-  grid-template-columns: 60%;
+  grid-template-columns: 80%;
   padding: $primary-padding-top-bottom;
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
 .title {
-  margin: 32px 0;
+  max-width: 736px;
+  margin-bottom: 16px;
   font-size: 36px;
   font-weight: 500;
-  line-height: 44px;
+  line-height: 40px;
   color: $primary-text-color;
 }
 
 .sub-title {
-  font-size: 18px;
-  line-height: 22px;
+  max-width: 560px;
+  font-size: 20px;
+  line-height: 24px;
+  color: $primary-text-color;
+}
+
+.contacts-and-form {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 144px;
 }
 
 .text-input {
@@ -24,34 +38,6 @@
   margin: 8px 0;
   border: 1px solid $primary-border;
   border-radius: 8px;
-}
-
-.form {
-  display: grid;
-  grid-template-columns: 80%;
-  margin: 48px 0;
-}
-
-.drop-zone {
-  padding: 60px;
-  border: 2px dashed $primary-border;
-  border-radius: 4px;
-}
-
-.instruction {
-  font-size: 14px;
-  line-height: 16px;
-  color: $primary-text-color;
-}
-
-.drop-text {
-  padding-bottom: 8px;
-}
-
-.supported-formats {
-  font-size: 14px;
-  line-height: 16px;
-  color: $secondary-text-color;
 }
 
 .checkbox-wrapper {
@@ -73,6 +59,30 @@
   display: grid;
   grid-template-columns: 50%;
   justify-content: start;
+}
+
+.error {
+  border: 1px solid $third-text-color;
+}
+
+.contacts {
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 30px;
+  color: $primary-text-color;
+}
+
+.contacts-sub-title {
+  display: flex;
+  align-items: center;
+  padding: 8px 0;
+  font-size: 16px;
+  line-height: 19px;
+  color: $secondary-text-color;
+}
+
+.phone {
+  margin-bottom: 16px;
 }
 
 .link {
