BEAR-35 range slider

--- a/src/components/UI/rangeSlider/rangeSlider.module.css
+++ b/src/components/UI/rangeSlider/rangeSlider.module.css
@@ -32,9 +32,27 @@
 }
 
 .range {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  gap: 16px;
   align-items: center;
-  justify-content: space-between;
   height: 100%;
   padding: 0 16px;
+}
+
+.inputs {
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+}
+
+.input {
+  max-width: 80px;
+  padding: 8px;
+  border: 1px solid $primary-border;
+  border-radius: 8px;
+}
+
+.hyphen {
+  padding: 8px;
+  color: $secondary-text-color;
 }
