--- a/src/pages/productsPage/components/filters/filters.module.css
+++ b/src/pages/productsPage/components/filters/filters.module.css
@@ -1,6 +1,6 @@
 .filters {
   display: grid;
-  grid-template-columns: repeat(3, minmax(260px, 1fr));
+  grid-template-columns: 4fr 5fr 3fr;
   align-items: center;
 }
 
