BEAR-27 replace data

--- a/src/pages/productsPage/components/offerCards/offerCards.module.css
+++ b/src/pages/productsPage/components/offerCards/offerCards.module.css
@@ -19,6 +19,10 @@
   color: $primary-text-color;
 }
 
+.btn {
+  padding: 0;
+}
+
 @media screen and (max-width: $breakpointLarge) {
   .cards {
     grid-template-columns: 50% 50%;
