BEAR-36 change autocomplete style

--- a/src/components/UI/autocomplete/autocompleteUI.module.css
+++ b/src/components/UI/autocomplete/autocompleteUI.module.css
@@ -24,4 +24,13 @@
   & :global(.v-field__append-inner) {
     display: none;
   }
+
+  & :global(.v-field__input) {
+    align-items: center;
+    padding: 0;
+  }
+
+  & :global(.v-autocomplete .v-field .v-field__input > input) {
+    align-self: center;
+  }
 }
