--- a/src/components/searchComponent/searchComponent.module.css
+++ b/src/components/searchComponent/searchComponent.module.css
@@ -26,6 +26,14 @@
   line-height: 24px;
 }
 
+.main-mobile {
+  display: none;
+}
+
+.main-web {
+  display: block;
+}
+
 @media screen and (max-width: $breakpointLarge) {
   .title {
     font-size: 40px;
@@ -36,5 +44,13 @@
     grid-template-columns: 100%;
     font-size: 16px;
     line-height: 20px;
+  }
+
+  .main-mobile {
+    display: block;
+  }
+
+  .main-web {
+    display: none;
   }
 }
