--- a/src/components/UI/slider/sliderUI.module.css
+++ b/src/components/UI/slider/sliderUI.module.css
@@ -1,11 +1,10 @@
 @import "/src/styles/variables.modules.css";
 
 .wrapper {
-  display: grid;
-  grid-template-columns: 1fr 10fr 1fr;
+  display: flex;
   gap: 8px;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 80px 0;
 }
 
@@ -27,8 +26,7 @@
 }
 
 .slider {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  display: flex;
   gap: 16px;
 }
 
