--- a/src/styles/variables.modules.css
+++ b/src/styles/variables.modules.css
@@ -21,6 +21,7 @@ $secondary-chip-background: #e99d45;
 $primary-color: #000;
 
 $primary-margin: 0 72px;
+$secondary-margin: 0 40px;
 $primary-padding-top-bottom: 40px 0;
 
 $breakpointSmall: 600px;
