--- a/src/components/header/headerBlock.module.css
+++ b/src/components/header/headerBlock.module.css
@@ -2,7 +2,8 @@
 
 .wrapper {
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 1fr 3fr;
+  justify-content: space-between;
   padding: 20px 0;
   margin: $primary-margin;
 }
@@ -32,6 +33,20 @@
 
 @media screen and (max-width: $breakpointExtraLarge) {
   .wrapper {
-    grid-template-columns: 100%;
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: $breakpointLarge) {
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin: $secondary-margin;
+  }
+}
+
+@media screen and (max-width: $breakpointSmall) {
+  .wrapper {
+    margin: $mobile-margin;
   }
 }
