--- a/src/pages/homePage/components/benefitsCards/benefitsCards.module.css
+++ b/src/pages/homePage/components/benefitsCards/benefitsCards.module.css
@@ -6,7 +6,7 @@
 
 .benefits-wrapper {
   display: grid;
-  grid-template-columns: calc((100% - 62px)/3) calc((100% - 62px)/3) calc((100% - 62px)/3);
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 32px;
 }
 
@@ -22,5 +22,15 @@
   .wrapper {
     grid-template-columns: 100%;
     gap: 24px;
+  }
+
+  .benefits-wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: $breakpointExtraSmall) {
+  .benefits-wrapper {
+    grid-template-columns: 1fr;
   }
 }
