--- a/src/components/UI/button/button.module.css
+++ b/src/components/UI/button/button.module.css
@@ -5,9 +5,9 @@
   flex-direction: row;
   gap: 8px;
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
+  text-align: start;
   cursor: pointer;
   border: none;
   border-radius: 8px;
