--- a/src/pages/contractOfferPage/contractOffer.module.css
+++ b/src/pages/contractOfferPage/contractOffer.module.css
@@ -9,3 +9,15 @@
 .text {
   padding: 12px 0;
 }
+
+@media screen and (max-width: $breakpointLarge) {
+  .container {
+    margin: $secondary-margin;
+  }
+}
+
+@media screen and (max-width: $breakpointSmall) {
+  .container {
+    margin: $mobile-margin;
+  }
+}
