--- a/src/components/UI/loader/loader.module.css
+++ b/src/components/UI/loader/loader.module.css
@@ -1,31 +1,48 @@
 @import "/src/styles/variables.modules.css";
 
 .wrapper {
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .external {
-  width: 88px;
-  height: 88px;
-  margin: 0 auto;
-  border: 8px solid $primary-btn-color;
-  border-right: transparent;
-  border-left: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 4px;
+  border: 8px solid $pseudo-btn-hover-color;
+  border-top: 8px solid transparent;
   border-radius: 50%;
-  animation-name: rotation;
+  animation-name: rotation-back;
   animation-duration: 2s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
 
 .internal {
-  width: 72px;
-  height: 68px;
-  margin: 0 auto;
-  border: 6px solid $secondary-text-color;
-  border-top: transparent;
-  border-bottom: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 4px;
+  border: 8px dotted $secondary-btn-hover-color;
   border-radius: 50%;
+  animation-name: rotation-back;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 6px solid $hint-background;
+  border-radius: 50%;
+  animation-name: rotation;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
 @keyframes rotation {
@@ -35,5 +52,239 @@
 
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes rotation-back {
+  0% {
+    transform: rotate(360deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.round {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  margin: 0 auto;
+  border: 20px solid $third-background;
+  border-radius: 50%;
+}
+
+.move {
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  width: 80px;
+  height: 80px;
+  border: 20px solid transparent;
+  border-right: 20px solid $secondary-btn-hover-color;
+  border-radius: 50%;
+  transition: border 2s;
+  animation-name: move-rotation;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes move-rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.step-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.step {
+  width: 8px;
+  height: 8px;
+  margin: 8px;
+  background-color: $secondary-btn-hover-color;
+  border-radius: 50%;
+}
+
+.step1 {
+  animation-name: step1-scale;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.step2 {
+  animation-name: step2-scale;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.step3 {
+  animation-name: step3-scale;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.step4 {
+  animation-name: step4-scale;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.step5 {
+  animation-name: step5-scale;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes step1-scale {
+  16% {
+    transform: scale(2);
+  }
+}
+
+@keyframes step2-scale {
+  32% {
+    transform: scale(2);
+  }
+}
+
+@keyframes step3-scale {
+  47% {
+    transform: scale(2);
+  }
+}
+
+@keyframes step4-scale {
+  62% {
+    transform: scale(2);
+  }
+}
+
+@keyframes step5-scale {
+  80% {
+    transform: scale(2);
+  }
+}
+
+.stick-wrapper {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.middle {
+  position: absolute;
+  top: 18%;
+  right: 26%;
+  width: 44px;
+  height: 44px;
+  background: $primary-background;
+  border-radius: 50%;
+}
+
+.stick {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 4px;
+  height: 80px;
+  background-color: $secondary-btn-hover-color;
+  box-shadow: 0 0 1px 0 rgb(0 0 0);
+}
+
+.stick1 {
+  transform: rotate(0deg);
+  animation-name: change-color1;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.stick2 {
+  transform: rotate(30deg);
+  animation-name: change-color2;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.stick3 {
+  transform: rotate(60deg);
+  animation-name: change-color3;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.stick4 {
+  transform: rotate(90deg);
+  animation-name: change-color4;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.stick5 {
+  transform: rotate(120deg);
+  animation-name: change-color5;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.stick6 {
+  transform: rotate(150deg);
+  animation-name: change-color6;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes change-color1 {
+  0% {
+    background-color: $primary-btn-color;
+  }
+}
+
+@keyframes change-color2 {
+  8% {
+    background-color: $primary-btn-color;
+  }
+}
+
+@keyframes change-color3 {
+  16% {
+    background-color: $primary-btn-color;
+  }
+}
+
+@keyframes change-color4 {
+  24% {
+    background-color: $primary-btn-color;
+  }
+}
+
+@keyframes change-color5 {
+  32% {
+    background-color: $primary-btn-color;
+  }
+}
+
+@keyframes change-color6 {
+  40% {
+    background-color: $primary-btn-color;
   }
 }
