BEAR-43 mobile navigation in progress

--- a/src/components/header/headerBlock.module.css
+++ b/src/components/header/headerBlock.module.css
@@ -8,6 +8,15 @@
   margin: $primary-margin;
 }
 
+.wrapper-mobile {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0;
+  margin: $primary-margin;
+}
+
 .logo-map {
   display: flex;
 }
