--- a/src/components/navigation/navigationMenuMobile.module.css
+++ b/src/components/navigation/navigationMenuMobile.module.css
@@ -5,7 +5,8 @@
   top: 0;
   right: 0;
   bottom: 0;
-  min-width: 260px;
+  z-index: 2;
+  min-width: 220px;
   padding-top: 80px;
   background-color: $third-background;
   box-shadow: 1px 8px 12px rgb(58 60 76 / 8%), 1px 1px 2px rgb(58 60 76 / 4%);
@@ -27,7 +28,22 @@
 }
 
 .btn-wrapper {
-  z-index: 2;
+  z-index: 3;
   display: flex;
   justify-content: flex-end;
+}
+
+.opacity-block {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  min-width: 100%;
+  background-color: $secondary-text-color;
+  opacity: 0.2;
+}
+
+.opacity-block-hide {
+  display: none;
 }
