--- a/src/components/navigation/navigationMenuMobile.module.css
+++ b/src/components/navigation/navigationMenuMobile.module.css
@@ -6,10 +6,15 @@
   right: 0;
   bottom: 0;
   z-index: 2;
+  display: block;
   min-width: 220px;
   padding-top: 80px;
   background-color: $third-background;
   box-shadow: 1px 8px 12px rgb(58 60 76 / 8%), 1px 1px 2px rgb(58 60 76 / 4%);
+  animation-name: menu;
+  animation-duration: 400ms;
+  animation-timing-function: linear;
+  animation-iteration-count: initial;
 }
 
 .menu-mobile-hide {
@@ -46,4 +51,18 @@
 
 .opacity-block-hide {
   display: none;
+}
+
+@keyframes menu {
+  0% {
+    transform: translateX(100%);
+  }
+
+  50% {
+    transform: translateX(50%);
+  }
+
+  100% {
+    transform: translateX(0%);
+  }
 }
