--- a/src/pages/emptyPage/emptyPage.module.css
+++ b/src/pages/emptyPage/emptyPage.module.css
@@ -4,16 +4,21 @@
   margin: $primary-margin;
   font-size: 60px;
   line-height: 80px;
+  text-align: center;
 }
 
 @media screen and (max-width: $breakpointLarge) {
   .notice {
     margin: $secondary-margin;
+    font-size: 40px;
+    line-height: 60px;
   }
 }
 
 @media screen and (max-width: $breakpointSmall) {
   .notice {
     margin: $mobile-margin;
+    font-size: 20px;
+    line-height: 40px;
   }
 }
