--- a/src/components/navigation/navigationMenuMobile.module.css
+++ b/src/components/navigation/navigationMenuMobile.module.css
@@ -1,35 +1,38 @@
 @import "/src/styles/variables.modules.css";
 
-.menu-mobile-open {
+.menu-wrapper {
   position: fixed;
   top: 0;
   right: 0;
+  bottom: 0;
+  left: 0;
   z-index: 2;
+}
+
+.menu-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.menu-mobile {
+  position: absolute;
+  top: 0;
+  z-index: 3;
   width: 220px;
   height: 100vh;
   padding-top: 100px;
   background-color: $third-background;
   box-shadow: 1px 8px 12px rgb(58 60 76 / 8%), 1px 1px 2px rgb(58 60 76 / 4%);
-  animation-name: menu-open;
-  animation-duration: 400ms;
-  animation-timing-function: linear;
-  animation-iteration-count: initial;
+  transition: 0.6s;
+}
+
+.menu-mobile-open {
+  right: 0;
 }
 
 .menu-mobile-close {
-  position: fixed;
-  top: 0;
   right: -220px;
-  z-index: 2;
-  width: 220px;
-  height: 100vh;
-  padding-top: 100px;
-  background-color: $third-background;
-  box-shadow: 1px 8px 12px rgb(58 60 76 / 8%), 1px 1px 2px rgb(58 60 76 / 4%);
-  animation-name: menu-close;
-  animation-duration: 400ms;
-  animation-timing-function: linear;
-  animation-iteration-count: initial;
 }
 
 .menu-mobile-hide {
@@ -42,24 +45,35 @@
   color: $primary-text-color;
 }
 
+.btn-wrapper {
+  position: relative;
+  z-index: 4;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .btn {
   width: max-content;
   height: max-content;
 }
 
-.btn-wrapper {
-  z-index: 3;
-  display: flex;
-  justify-content: flex-end;
+.btn-menu-close {
+  position: static;
+}
+
+.btn-menu-open {
+  position: fixed;
+  top: 24px;
+  right: 40px;
 }
 
 .opacity-block {
   position: absolute;
   top: 0;
+  right: 0;
   bottom: 0;
   left: 0;
   z-index: 2;
-  min-width: 100%;
   background-color: $secondary-text-color;
   opacity: 0.2;
 }
@@ -68,30 +82,20 @@
   display: none;
 }
 
-@keyframes menu-open {
-  0% {
-    transform: translateX(100%);
-  }
-
-  50% {
-    transform: translateX(50%);
-  }
-
-  100% {
-    transform: translateX(0%);
+@media screen and (max-width: $breakpointSmall) {
+  .btn-menu-open {
+    position: fixed;
+    top: 24px;
+    right: 20px;
   }
 }
 
-@keyframes menu-close {
-  0% {
-    transform: translateX(-100%);
+@media screen and (max-width: $breakpointExtraSmall) {
+  .menu-mobile {
+    width: 100%;
   }
 
-  50% {
-    transform: translateX(-50%);
-  }
-
-  100% {
-    transform: translateX(0%);
+  .menu-mobile-close {
+    right: -100%;
   }
 }
