--- a/src/components/searchComponent/components/additionalSearchInputs/additionalSearchInputs.module.css
+++ b/src/components/searchComponent/components/additionalSearchInputs/additionalSearchInputs.module.css
@@ -26,7 +26,7 @@
   color: $third-text-color;
 }
 
-@media screen and (max-width: $breakpointExtraLarge) {
+@media screen and (max-width: $breakpoint-extra-large) {
   .additional-form {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -36,7 +36,7 @@
   }
 }
 
-@media screen and (max-width: $breakpointLarge) {
+@media screen and (max-width: $breakpoint-large) {
   .additional-form {
     display: grid;
     grid-template-columns: 100%;
