--- a/src/pages/companiesPage/components/companyCards/companyCards.module.css
+++ b/src/pages/companiesPage/components/companyCards/companyCards.module.css
@@ -11,7 +11,7 @@
   align-items: stretch;
 }
 
-@media screen and (max-width: $breakpointExtraLarge) {
+@media screen and (max-width: $breakpoint-extra-large) {
   .cards {
     grid-template-columns: 100%;
     gap: 24px;
