--- a/src/pages/contractOfferPage/contractOffer.module.css
+++ b/src/pages/contractOfferPage/contractOffer.module.css
@@ -10,13 +10,13 @@
   padding: 12px 0;
 }
 
-@media screen and (max-width: $breakpointLarge) {
+@media screen and (max-width: $breakpoint-large) {
   .container {
     margin: $secondary-margin;
   }
 }
 
-@media screen and (max-width: $breakpointSmall) {
+@media screen and (max-width: $breakpoint-small) {
   .container {
     margin: $mobile-margin;
   }
