--- a/src/components/contactUsForm/contactUsForm.module.css
+++ b/src/components/contactUsForm/contactUsForm.module.css
@@ -49,7 +49,7 @@
   border-radius: 8px;
 }
 
-@media screen and (max-width: $breakpointSmall) {
+@media screen and (max-width: $breakpoint-small) {
   .form-btn {
     display: grid;
     grid-template-columns: 100%;
