--- a/src/components/navigation/navigationMenu.module.css
+++ b/src/components/navigation/navigationMenu.module.css
@@ -37,7 +37,7 @@
   box-shadow: 1px 8px 12px rgb(58 60 76/8%), 1px 1px 2px rgb(58 60 76/4%);
 }
 
-@media screen and (max-width: $breakpointLarge) {
+@media screen and (max-width: $breakpoint-large) {
   .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
