--- a/src/components/navigation/navigationMenuMobile.module.css
+++ b/src/components/navigation/navigationMenuMobile.module.css
@@ -1,12 +1,21 @@
 @import "/src/styles/variables.modules.css";
 
-.menu-wrapper {
+.menu-wrapper-open {
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 2;
+  z-index: $z-index-default;
+}
+
+.menu-wrapper-hide {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: $z-index-default;
 }
 
 .menu-container {
@@ -18,7 +27,7 @@
 .menu-mobile {
   position: absolute;
   top: 0;
-  z-index: 3;
+  z-index: $z-index-extra;
   width: 220px;
   height: 100vh;
   padding-top: 100px;
@@ -47,7 +56,7 @@
 
 .btn-wrapper {
   position: relative;
-  z-index: 4;
+  z-index: $z-index-total;
   display: flex;
   justify-content: flex-end;
 }
@@ -73,7 +82,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 2;
+  z-index: $z-index-default;
   background-color: $secondary-text-color;
   opacity: 0.2;
 }
@@ -82,7 +91,7 @@
   display: none;
 }
 
-@media screen and (max-width: $breakpointSmall) {
+@media screen and (max-width: $breakpoint-small) {
   .btn-menu-open {
     position: fixed;
     top: 24px;
@@ -90,7 +99,7 @@
   }
 }
 
-@media screen and (max-width: $breakpointExtraSmall) {
+@media screen and (max-width: $breakpoint-extra-small) {
   .menu-mobile {
     width: 100%;
   }
