--- a/src/components/searchComponent/searchComponent.module.css
+++ b/src/components/searchComponent/searchComponent.module.css
@@ -26,7 +26,7 @@
   line-height: 24px;
 }
 
-@media screen and (max-width: $breakpointLarge) {
+@media screen and (max-width: $breakpoint-large) {
   .title {
     font-size: 40px;
     line-height: 40px;
