--- a/src/pages/emptyPage/emptyPage.module.css
+++ b/src/pages/emptyPage/emptyPage.module.css
@@ -7,7 +7,7 @@
   text-align: center;
 }
 
-@media screen and (max-width: $breakpointLarge) {
+@media screen and (max-width: $breakpoint-large) {
   .notice {
     margin: $secondary-margin;
     font-size: 40px;
@@ -15,7 +15,7 @@
   }
 }
 
-@media screen and (max-width: $breakpointSmall) {
+@media screen and (max-width: $breakpoint-small) {
   .notice {
     margin: $mobile-margin;
     font-size: 20px;
