--- a/src/pages/productsPage/components/offerCards/offerCards.module.css
+++ b/src/pages/productsPage/components/offerCards/offerCards.module.css
@@ -27,7 +27,7 @@
   padding: 0;
 }
 
-@media screen and (max-width: $breakpointLarge) {
+@media screen and (max-width: $breakpoint-large) {
   .cards {
     grid-template-columns: 50% 50%;
   }
