--- a/src/pages/productsPage/components/productCard/productCard.module.css
+++ b/src/pages/productsPage/components/productCard/productCard.module.css
@@ -58,7 +58,7 @@
   padding: 4px;
 }
 
-@media screen  and (max-width: $breakpointLarge) {
+@media screen  and (max-width: $breakpoint-large) {
   .grocery {
     display: grid;
     grid-template-columns: 1fr;
@@ -66,7 +66,7 @@
   }
 }
 
-@media screen  and (max-width: $breakpointExtraSmall) {
+@media screen  and (max-width: $breakpoint-extra-small) {
   .grocery {
     padding: 8px;
   }
