--- a/src/pages/productsPage/productsPage.module.css
+++ b/src/pages/productsPage/productsPage.module.css
@@ -23,13 +23,13 @@
   line-height: 24px;
 }
 
-@media screen and (max-width: $breakpointLarge) {
+@media screen and (max-width: $breakpoint-large) {
   .container {
     margin: $secondary-margin;
   }
 }
 
-@media screen and (max-width: $breakpointSmall) {
+@media screen and (max-width: $breakpoint-small) {
   .container {
     margin: $mobile-margin;
   }
