--- a/src/components/markingHint/markingHint.module.css
+++ b/src/components/markingHint/markingHint.module.css
@@ -7,7 +7,7 @@
   max-height: 160px;
   background: $hint-background;
   border-radius: 8px;
-  box-shadow: 1px 8px 12px rgb(58 60 76 / 8%), 1px 1px 2px rgb(58 60 76 / 4%);
+  box-shadow: $shadow-primary;
 }
 
 .text {
