--- a/src/components/navigation/navigationMenu.module.css
+++ b/src/components/navigation/navigationMenu.module.css
@@ -34,7 +34,7 @@
   min-width: 200px;
   background: $primary-background;
   border-radius: 8px;
-  box-shadow: 1px 8px 12px rgb(58 60 76/8%), 1px 1px 2px rgb(58 60 76/4%);
+  box-shadow: $shadow-primary;
 }
 
 @media screen and (max-width: $breakpoint-large) {
