--- a/src/components/UI/autocomplete/autocompleteUI.module.css
+++ b/src/components/UI/autocomplete/autocompleteUI.module.css
@@ -30,7 +30,7 @@
     padding: 0;
   }
 
-  & :global(.v-autocomplete .v-field .v-field__input > input) {
+  & :global(.v-autocomplete .v-field .v-field__input) {
     align-self: center;
   }
 }
