--- a/src/components/searchComponent/components/mainSearchInputs/mainSearchInputs.module.css
+++ b/src/components/searchComponent/components/mainSearchInputs/mainSearchInputs.module.css
@@ -8,7 +8,7 @@
 
 .wrapper {
   display: grid;
-  grid-template-columns: 4fr 1fr 4fr 1fr 3fr;
+  grid-template-columns: 4fr 4fr 1fr 3fr;
   gap: 8px;
   padding: 8px;
   margin: 12px 0;
