BEAR-44 getters with bugs

--- a/src/components/UI/autocomplete/autocompleteUI.module.css
+++ b/src/components/UI/autocomplete/autocompleteUI.module.css
@@ -30,6 +30,10 @@
     padding: 0;
   }
 
+  & :global(.v-input--horizontal .v-input__prepend) {
+    margin: 0 16px;
+  }
+
   & :global(.v-autocomplete .v-field .v-field__input) {
     align-self: center;
   }
