BEAR-44 start mini tasks

--- a/src/components/header/headerBlock.module.css
+++ b/src/components/header/headerBlock.module.css
@@ -38,6 +38,7 @@
   font-weight: 800;
   line-height: 58px;
   color: $primary-text-color;
+  cursor: pointer;
 }
 
 @media screen and (max-width: $breakpoint-extra-large) {
