--- a/src/pages/becomePartnerPage/becomePartnerPage.module.css
+++ b/src/pages/becomePartnerPage/becomePartnerPage.module.css
@@ -1,31 +1,37 @@
 @import "/src/styles/variables.modules.css";
 
 .container {
+  display: grid;
+  gap: 40px;
+  padding-top: 40px;
   margin: $primary-margin;
 }
 
-.companyName {
-  margin: 60px 0 40px;
-  font-size: 46px;
+.block {
+  padding: 20px;
+  background: $third-background;
+  border: none;
+  border-radius: 8px;
+}
+
+.title {
+  margin-bottom: 20px;
+  font-size: 26px;
   font-weight: 500;
-  line-height: 78px;
+  line-height: 44px;
   color: $primary-text-color;
 }
 
-.btn {
-  width: max-content;
-  height: max-content;
-  margin: 80px auto 0;
+.text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  color: $secondary-text-color;
 }
 
 @media screen and (max-width: $breakpoint-large) {
   .container {
     margin: $secondary-margin;
-  }
-
-  .companyName {
-    font-size: 40px;
-    line-height: 40px;
   }
 }
 
