--- a/src/pages/FAQPage/FAQPage.module.css
+++ b/src/pages/FAQPage/FAQPage.module.css
@@ -4,28 +4,17 @@
   margin: $primary-margin;
 }
 
-.companyName {
-  margin: 60px 0 40px;
-  font-size: 46px;
+.title {
+  margin: 40px 0;
+  font-size: 36px;
   font-weight: 500;
-  line-height: 78px;
+  line-height: 44px;
   color: $primary-text-color;
-}
-
-.btn {
-  width: max-content;
-  height: max-content;
-  margin: 80px auto 0;
 }
 
 @media screen and (max-width: $breakpoint-large) {
   .container {
     margin: $secondary-margin;
-  }
-
-  .companyName {
-    font-size: 40px;
-    line-height: 40px;
   }
 }
 
