BEAR-44 company and companies style fix

--- a/src/pages/oneCompanyPage/oneCompanyPage.module.css
+++ b/src/pages/oneCompanyPage/oneCompanyPage.module.css
@@ -18,6 +18,10 @@
   margin: 80px auto 0;
 }
 
+.btn-text {
+  color: $primary-text-color;
+}
+
 @media screen and (max-width: $breakpoint-large) {
   .container {
     margin: $secondary-margin;
